--- a/Sky/Storyboards/Base.lproj/Main.storyboard
+++ b/Sky/Storyboards/Base.lproj/Main.storyboard
@@ -62,12 +62,17 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="JFr-jZ-xJt">
                                 <rect key="frame" x="197" y="151.5" width="20" height="20"/>
                             </activityIndicatorView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="12l-0Y-8Tx">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Whoops! Something is wrong..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="12l-0Y-8Tx">
                                 <rect key="frame" x="28" y="151" width="358" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Et3-g1-3FZ">
+                                <rect key="frame" x="177.5" y="180" width="59" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Retry"/>
+                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gm5-yB-Xep">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="322.5"/>
                                 <subviews>
@@ -164,7 +169,9 @@
                             <constraint firstItem="gm5-yB-Xep" firstAttribute="leading" secondItem="J3L-qo-Anf" secondAttribute="leading" id="LhT-6r-A0c"/>
                             <constraint firstAttribute="trailing" secondItem="gm5-yB-Xep" secondAttribute="trailing" id="Ymf-LK-N3k"/>
                             <constraint firstItem="12l-0Y-8Tx" firstAttribute="centerY" secondItem="J3L-qo-Anf" secondAttribute="centerY" id="aEB-JU-zOS"/>
+                            <constraint firstItem="Et3-g1-3FZ" firstAttribute="centerX" secondItem="J3L-qo-Anf" secondAttribute="centerX" id="aFE-4Z-ya5"/>
                             <constraint firstItem="JFr-jZ-xJt" firstAttribute="centerX" secondItem="J3L-qo-Anf" secondAttribute="centerX" id="f9A-rS-K0v"/>
+                            <constraint firstItem="Et3-g1-3FZ" firstAttribute="top" secondItem="12l-0Y-8Tx" secondAttribute="bottom" constant="8" id="mYi-mm-RAM"/>
                             <constraint firstItem="12l-0Y-8Tx" firstAttribute="leading" secondItem="J3L-qo-Anf" secondAttribute="leadingMargin" constant="8" id="tTI-8x-8Ke"/>
                             <constraint firstItem="JFr-jZ-xJt" firstAttribute="centerY" secondItem="J3L-qo-Anf" secondAttribute="centerY" id="xuN-2s-zmV"/>
                         </constraints>
@@ -175,6 +182,7 @@
                         <outlet property="humidityLabel" destination="YqG-EZ-N0b" id="P4c-P7-NLy"/>
                         <outlet property="loadingFailedLabel" destination="12l-0Y-8Tx" id="km6-wz-KgN"/>
                         <outlet property="locationLabel" destination="inc-Kq-rjG" id="vDV-uf-8yI"/>
+                        <outlet property="retryBtn" destination="Et3-g1-3FZ" id="42z-Jj-ECe"/>
                         <outlet property="summaryLabel" destination="MIF-Qa-EM1" id="qAl-vn-q1F"/>
                         <outlet property="temperatureLabel" destination="MjP-NW-nQh" id="HnV-JC-A4w"/>
                         <outlet property="weatherContainerView" destination="gm5-yB-Xep" id="rNF-kp-7bE"/>
